# ChangeLog for kde-base/kdelibs
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/ChangeLog,v 1.957 2013/11/05 22:22:57 dilfridge Exp $

*kdelibs-4.11.3 (05 Nov 2013)

  05 Nov 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  +kdelibs-4.11.3.ebuild:
  Version bump KDE SC 4.11.3

  10 Oct 2013; Chris Reffett <creffett@gentoo.org>
  files/kdelibs-4.10.0-udisks.patch,
  files/kdelibs-4.3.80-kdeui_util_kkeyserver_mac.patch,
  files/kdelibs-4.4.90-xslt.patch, files/kdelibs-4.6.2-armlinking.patch,
  files/kdelibs-4.6.3-no_suid_kdeinit.patch,
  files/kdelibs-4.7.96-mimetypes.patch, files/kdelibs-4.8.1-norpath.patch,
  files/kdelibs-4.9.3-werror.patch:
  Restore kdepim 4.4.11.1, accidentally removed when removing kde 4.11.1

  10 Oct 2013; Chris Reffett <creffett@gentoo.org> -kdelibs-4.11.1.ebuild,
  files/kdelibs-4.10.0-udisks.patch,
  files/kdelibs-4.3.80-kdeui_util_kkeyserver_mac.patch,
  files/kdelibs-4.4.90-xslt.patch, files/kdelibs-4.6.2-armlinking.patch,
  files/kdelibs-4.6.3-no_suid_kdeinit.patch,
  files/kdelibs-4.7.96-mimetypes.patch, files/kdelibs-4.8.1-norpath.patch,
  files/kdelibs-4.9.3-werror.patch:
  Drop KDE SC 4.11.1

  09 Oct 2013; Chris Reffett <creffett@gentoo.org>
  files/kdelibs-4.10.0-udisks.patch,
  files/kdelibs-4.3.80-kdeui_util_kkeyserver_mac.patch,
  files/kdelibs-4.4.90-xslt.patch, files/kdelibs-4.6.2-armlinking.patch,
  files/kdelibs-4.6.3-no_suid_kdeinit.patch,
  files/kdelibs-4.7.96-mimetypes.patch, files/kdelibs-4.8.1-norpath.patch,
  files/kdelibs-4.9.3-werror.patch:
  Version bump KDE SC 4.11.2

*kdelibs-4.11.2-r1 (08 Oct 2013)

  08 Oct 2013; Chris Reffett <creffett@gentoo.org> +kdelibs-4.11.2-r1.ebuild:
  Version bump KDE SC 4.11.2

  05 Sep 2013; Michael Palimaka <kensington@gentoo.org>
  +files/kdelibs-4.11.1-jpeg-9.patch, kdelibs-4.11.1.ebuild:
  Backport patch from upstream fixing build with jpeg-9, wrt bug #483348.
