@@ -13,4 +13,4 @@ RESTRICT=test
 SLOT=4
 SRC_URI=mirror://kde/stable/4.11.3/src/kdelibs-4.11.3.tar.xz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	cmake-utils	92319f03251f1235bc887cc84e5aef21	eutils	4878e7f88afc0ba0866ac112190b0fd4	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	gnome2-utils	b66c7c3889d2dd0913e9f3d2ac1c0859	kde4-base	5ba60672833e2a1cafaa86c446439d47	kde4-functions	7fc09e82c0d1735f44aedfa8e5073065	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=46e112150af507a2d8b5340a709c062f
+_md5_=3a7df67ece11490ce7a6f89a1dd42cfd
