@@ -1,0 +1,15 @@
+DEFINED_PHASES=compile configure install prepare setup test
+DEPEND=client? ( dev-libs/nspr dev-libs/nss dev-libs/openssl ) server? ( dev-libs/nspr dev-libs/nss dev-libs/openssl ) ncd? ( dev-libs/openssl ) virtual/pkgconfig sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) virtual/pkgconfig
+DESCRIPTION=Peer-to-peer VPN, NCD scripting language, tun2socks proxifier
+EAPI=5
+HOMEPAGE=http://code.google.com/p/badvpn/
+IUSE=+client +ncd +server +tun2socks +udpgw debug
+KEYWORDS=~amd64 ~arm ~x86
+LICENSE=BSD
+RDEPEND=client? ( dev-libs/nspr dev-libs/nss dev-libs/openssl ) server? ( dev-libs/nspr dev-libs/nss dev-libs/openssl ) ncd? ( dev-libs/openssl ) ncd? ( sys-apps/iproute2 >=virtual/udev-171 )
+REQUIRED_USE=|| ( client ncd server tun2socks udpgw )
+RESTRICT=!ncd? ( test )
+SLOT=0
+SRC_URI=http://badvpn.googlecode.com/files/badvpn-1.999.128.tar.bz2
+_eclasses_=cmake-utils	92319f03251f1235bc887cc84e5aef21	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	multilib	892e597faee02a5b94eb02ab512e7622	systemd	9f063b2cc19c5e8030911372aa246c4e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=d3cd6c109e4de0034fba947bf602dffb
