@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdelibs
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/ChangeLog,v 1.957 2013/11/05 22:22:57 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/ChangeLog,v 1.958 2013/11/21 21:09:40 johu Exp $
+
+*kdelibs-4.11.3-r1 (21 Nov 2013)
+
+  21 Nov 2013; Johannes Huber <johu@gentoo.org> +kdelibs-4.11.3-r1.ebuild,
+  -kdelibs-4.11.3.ebuild:
+  Revision bump drops man pages conflicting with kf5.
 
 *kdelibs-4.11.3 (05 Nov 2013)
 
